# SAM-DINO

./: README.md  dino_sam_vector.py  requirements.txt
script/: cocojson.py  compress_jpg.py  compress_tga.py  init_checkpoints.py  output.py  sam_execute.py
script/geo_detection/: img2Pointcld.py  main.py  pca.py  pointCloud.py  pointcld2Img.py  region.py
script/sliding_window/: region_growing.py  split_patch.py
segment_anything/segment_anything/: predictor.py
segment_anything/segment_anything/modeling/: mask_decoder.py  prompt_encoder.py  sam.py  transformer.py
superVoxel/: CMakeLists.txt  main.cc  mainpcl.cc  pca.h
superVoxel/codelibrary/geometry/io/: xyz_io.h
superVoxel/codelibrary/geometry/point_cloud/: supervoxel_segmentation.h
test/: auto_mask.py  dino_sam.py  sam_normal_mask.py  split_normal_mask.py
